caret fixes, scrollbar fixes, mobile fixes

--- a/scss/_mixins-override.scss
+++ b/scss/_mixins-override.scss
@@ -13,6 +13,7 @@
     height: $caret-width;
     border-bottom: 1px solid;
     border-left: 1px solid;
+    margin-right: .1em;
 
     @if $direction != 'left' {
       margin-left: $caret-spacing;
