--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,6 +2,8 @@
   background: $bg-color;
   color: $color;
 
+  @include scrollbar;
+
   .navbar-brand {
     color: $brand-color;
 
@@ -53,6 +55,7 @@
 @mixin navbar-dark {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .1);
   @include navbar-color($dark, $navbar-dark-color, $navbar-dark-brand-color, $navbar-dark-active-color, $navbar-dark-disabled-color);
+  @include scrollbar(true);
 
   .input-icon-addon {
     color: rgba($dark-mode-text, .64);
@@ -70,6 +73,8 @@
 
 @mixin navbar-vertical-nav {
   .navbar-collapse {
+    flex-direction: column;
+
     .navbar-nav {
       margin-left: -($container-padding-x);
       margin-right: -($container-padding-x);
@@ -94,7 +99,20 @@
         min-width: 0;
         display: flex;
         width: auto;
+        padding-left: add($container-padding-x, 1.5rem);
       }
+    }
+
+    .dropdown-toggle:after {
+      margin-left: auto;
+    }
+
+    .nav-item.active:after {
+      border-bottom-width: 0;
+      border-left-width: 2px;
+      right: auto;
+      top: 0;
+      bottom: 0;
     }
   }
 }
@@ -171,7 +189,8 @@ Navbar
               left: 0;
               right: 0;
               bottom: subtract(-.25rem, 1px);
-              border-bottom: 2px solid $primary;
+              border: 0 solid $primary;
+              border-bottom-width: 2px;
             }
           }
         }
@@ -209,7 +228,7 @@ Navbar toggler
 
 .navbar-toggler-icon {
   height: 2px;
-  width: 1.5em;
+  width: 1.25em;
   background: currentColor;
   border-radius: 10px;
   transition: $navbar-toggler-animation-time $navbar-toggler-animation-time top, $navbar-toggler-animation-time $navbar-toggler-animation-time bottom, $navbar-toggler-animation-time transform, 0s $navbar-toggler-animation-time opacity;
@@ -229,11 +248,11 @@ Navbar toggler
   }
 
   &:before {
-    top: -.5em;
+    top: -.45em;
   }
 
   &:after {
-    bottom: -.5em;
+    bottom: -.45em;
   }
 
   .navbar-toggler[aria-expanded="true"] & {
@@ -324,7 +343,7 @@ Navbar vertical
             }
 
             .navbar-collapse {
-              align-items: flex-start;
+              align-items: stretch;
             }
 
             .navbar-nav {
